test/cli/scenarios_to_cli/other /scenario_validate_disallow_default_serviceaccount/kyverno-test.yaml
name: validate-disallow-default-serviceaccount
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: validate-disallow-default-serviceaccount
    rule: prevent-mounting-default-serviceaccount
    resource: pod-with-default-sa
    kind: Pod
    result: fail
