test/cli/scenarios_to_cli/other /scenario_validate_disallow_default_serviceaccount/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-default-sa
  labels:
    app: pod-with-default-sa
spec: 
  serviceAccountName: default
  containers:
  - name: nginx
    image: nginx
